# mpctl

./: LICENSE  README.md  activate
cmds/dkr/: build_images.sh  ctl.sh  e2e_down.sh  e2e_run.sh  e2e_up.sh  services_clean.sh
cmds/local/: node_activate_env.sh
docs/: local-net-fully-dockerised.md  local-net-partially-dockerised.md
pgms/: Cargo.toml
resources/sql/: pgres-truncate-cpu-node-0.sql  pgres-truncate-cpu-node-1.sql  pgres-truncate-cpu-node-2.sql
utils/: main.sh  service_docker.sh
